#5-chore-패키지 의존성, 버튼 hover 색상 변경, 아이콘, 미디어 쿼리 테스트

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,6 @@
 
 @layer components {
     .primary-btn {
-        @apply w-full font-medium rounded-[16px] text-center hover:bg-cyan-400 transition-colors;
+        @apply w-full font-medium rounded-[16px] text-center hover:bg-black transition-colors;
     }
 }
