--- a/src/stories/Checkbox.css
+++ b/src/stories/Checkbox.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .checkbox-container input {
@@ -10,33 +10,63 @@
 }
 
 .checkmark {
-  height: 24px;
-  width: 24px;
+  height: 16px;
+  width: 16px;
   background-color: #fff;
-  border: 2px solid #888;
+  border: 1px solid #C6C6C6;
   border-radius: 4px;
   margin-right: 8px;
   position: relative;
 }
 
 .checkbox-container input:checked + .checkmark {
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #3733ED;
+  border-color: #3733ED;
 }
 
 .checkmark::after {
   content: "";
   position: absolute;
   display: none;
-  left: 7px;
-  top: 3px;
-  width: 5px;
-  height: 10px;
+  left: 5px;  /* X 위치 조정 */
+  top: 2px;  /* Y 위치 조정 */
+  width: 5px; /* 왼쪽 선의 길이 */
+  height: 10px; /* 오른쪽 선의 길이 */
   border: solid white;
-  border-width: 0 3px 3px 0;
+  border-width: 0 2px 2px 0;
   transform: rotate(45deg);
 }
 
 .checkbox-container input:checked + .checkmark::after {
   display: block;
+}
+
+.checkbox-label {
+  margin-left: 8px; /* 라벨과 체크박스 사이에 공간을 둠 */
+}
+
+/* 단순 체크 표시 스타일 */
+.check-container {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.check-container .checkmark-only {
+  width: 16px; /* 체크 표시의 크기를 조정 */
+  height: 16px;
+  position: relative;
+}
+
+.check-container input:checked + .checkmark-only::after {
+  content: "";
+  position: absolute;
+  left: 0; /* 체크 표시 위치 조정 */
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border: solid #007bff; /* 체크 표시 색상 조정 */
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
 }
