--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,22 @@
 
 @layer base {
   html {
-    font-family: var(--font-pretendard), ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family:
+      var(--font-pretendard),
+      ui-sans-serif,
+      system-ui,
+      -apple-system,
+      BlinkMacSystemFont,
+      'Segoe UI',
+      Roboto,
+      'Helvetica Neue',
+      Arial,
+      'Noto Sans',
+      sans-serif,
+      'Apple Color Emoji',
+      'Segoe UI Emoji',
+      'Segoe UI Symbol',
+      'Noto Color Emoji';
   }
 }
 
@@ -26,5 +41,20 @@
   .fourth-icon-btn {
     @apply border bg-color-button-fourth hover:border-color-button-fourth-hover active:border-color-button-fourth-pressed focus:border-color-button-fourth-focus
     focus:text-[##3733ED] disabled:border-color-disabled *:disabled:text-[#D9D9D9] *:text-[#000000];
+  }
+}
+
+.mobileHeader {
+  display: block;
+}
+.header {
+  display: none;
+}
+@media (min-width: 570px) {
+  .mobileHeader {
+    display: none;
+  }
+  .header {
+    display: block;
   }
 }
